Table business.authentications {
  user_id uuid [pk, ref: - business.users.id]
  username varchar(64) [not null]
  password varchar(128) [not null]
  version timestamptz [not null, default: `now()`]
  Indexes {
    username
    password
    version
  }
}

Table business.authorizations {
  user_id uuid [ref: > business.users.id]
  role_id uuid [ref: > business.roles.id]
  Indexes {
    (user_id, role_id) [pk]
  }
}

Table business.roles {
  id uuid [pk, default: `uuid_generate_v4()`]
  name varchar(32) [not null]
  permissions "varchar(32)[]" [not null]
  version timestamptz [not null, default: `now()`]
  Indexes {
    name
    permissions
    version
  }
}

Table business.users {
  id uuid [pk, default: `uuid_generate_v4()`]
  name varchar(64) [not null]
  skills "varchar(32)[]" [not null, note: 'item skill']
  address jsonb [note: 'street, number, city, etc']
  location geometry(point,4326) [note: 'lat, lng']
  payment float [note: 'amount per hour']
  version timestamptz [not null, default: `now()`]
  Indexes {
    name
    skills
    address
    location
    payment
    version
  }
}

Table business.tasks {
  id uuid [pk, default: `uuid_generate_v4()`]
  previous_id uuid [ref: - business.tasks.id, note: 'dependency']
  user_id uuid [ref: > business.users.id, note: 'planning phase']
  project_id uuid [ref: > business.projects.id, not null]
  items jsonb[] [not null, note: 'type, date, skill, content']
  effort integer [note: 'amount of time (hours)']
  version timestamptz [not null, default: `now()`]
  Indexes {
    previous_id
    user_id
    project_id
    items
    effort
    version
  }
}

Table business.projects {
  id uuid [pk, default: `uuid_generate_v4()`]
  title varchar(64)
  report text [note: 'rich (HTML/MD) content']
  deadline timestamptz
  budget decimal [note: 'USD, EUR or Bitcoin']
  done boolean [not null, default: `false`]
  version timestamptz [not null, default: `now()`]
  Indexes {
    title
    report
    deadline
    budget
    done
    version
  }
}